Validation if user exist in our database

--- a/gui/login.kv
+++ b/gui/login.kv
@@ -107,7 +107,8 @@ ScreenManager:
 
             MDTextFieldRound:
                 id: user_login_label
-                hint_text: "login"
+                write_tab: False
+                hint_text: "Login"
                 icon_right: "account-check"
                 size_hint_x: None
                 width: 250
@@ -116,7 +117,8 @@ ScreenManager:
 
             MDTextFieldRound:
                 id: user_email_label
-                hint_text: "email"
+                write_tab: False
+                hint_text: "E-mail"
                 icon_right: "account"
                 size_hint_x: None
                 width: 250
@@ -125,6 +127,7 @@ ScreenManager:
 
             MDTextFieldRound:
                 id: rejestracja_password
+                write_tab: False
                 hint_text: "hasło"
                 icon_right: "eye-off"
                 size_hint_x: None
@@ -135,6 +138,7 @@ ScreenManager:
 
             MDTextFieldRound:
                 id: rejestracja_password_retype
+                write_tab: False
                 hint_text: "powtórz hasło"
                 icon_right: "eye-off"
                 size_hint_x: None
